--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
         <h1>Section 2: JavaScript Complete Course</h1>
     </body>
 
-    <script src="script.js"></script>
+    <script src="section4.js"></script>
 </html>
